# Apollo

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  taxonomy.example.toml
.github/scripts/: package.sh
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: daemon.rs  main.rs
crates/app/src/cli/: config.rs  keys.rs  mod.rs  start.rs  stop.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  item.rs  lib.rs  webhook.rs
crates/config/: Cargo.toml
crates/config/src/: defaults.rs  edit.rs  error.rs  lib.rs  load.rs  schema.rs  taxonomy.rs  tests.rs  units.rs  validate.rs
crates/domain/: Cargo.toml
crates/domain/src/: image.rs  lib.rs  model.rs  result.rs  task.rs
crates/engine/: Cargo.toml
crates/engine/src/: aggregate.rs  error.rs  gate.rs  lib.rs  memory.rs  queue.rs  registry.rs  scheduler.rs  webhook.rs  worker.rs
crates/inference/: Cargo.toml
crates/inference/src/: device.rs  error.rs  lib.rs  loader.rs  preprocess.rs
crates/inference/src/arch/: mod.rs  siglip.rs  videomae.rs  vit.rs
crates/media/: Cargo.toml
crates/media/src/: decode.rs  error.rs  fetch.rs  ffmpeg.rs  lib.rs  strategy.rs
crates/media/src/sampling/: every_nth.rs  fps.rs  iframes.rs  mod.rs  scene.rs  uniform.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
crates/proto/tests/: schema.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  convert.rs  lib.rs  service.rs  webhook.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs  resume.rs  retention.rs
crates/storage/src/backends/: mod.rs  postgres.rs  sqlite.rs  surreal.rs  surrealdb.rs
docs/: README.md  configuration.md  database.md  grpc-api.md  webhooks.md
proto/: common.proto  inference.proto  webhook.proto
