[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/config",
    "crates/proto",
    "crates/storage",
    "crates/inference",
    "crates/media",
    "crates/engine",
    "crates/server",
    "crates/client",
    "crates/app",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
tonic = { version = "0.14" }
tracing = { version = "0.1" }
tokio = { version = "1.52", default-features = false }
