[package]
name = "apollo"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "apollo"
path = "src/main.rs"

[dependencies]
apollo-config  = { path = "../config" }
apollo-engine  = { path = "../engine" }
apollo-server  = { path = "../server" }
apollo-storage = { path = "../storage" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
libc = "0.2"

[features]
# Build the binary with GPU support: `cargo build -p apollo --features cuda`.
cuda = ["apollo-engine/cuda", "apollo-server/cuda"]
