[package]
name = "apollo-client"
version = "0.1.0"
edition.workspace = true
description = "Client SDK for the apollo inference gRPC service: submit image/video classification tasks and receive webhook callbacks. Usable from any Rust project."
license = "MIT OR Apache-2.0"

[dependencies]
# The wire contract. Pulls tonic + prost; needs `protoc` at build time.
apollo-proto = { path = "../proto" }
tonic = "0.14"
thiserror = "2"
