[package]
name = "apollo-client"
version = "1.0.1"
edition.workspace = true
description = "Client SDK for the apollo inference gRPC service: submit image/video classification tasks and receive webhook callbacks. Usable from any Rust project."
license = "MIT OR Apache-2.0"

[dependencies]
# The wire contract. Pulls tonic + prost; needs `protoc` at build time.
apollo-proto = { path = "../proto" }
tonic = { workspace = true }
thiserror = "2"
futures = "0.3"
pasetors = "0.7"
# Verifies the HMAC-SHA256 signature on incoming webhook deliveries.
hmac = "0.12"
sha2 = "0.10"
# Optional gRPC server reflection for the webhook receiver (`reflection` feature).
tonic-reflection = { version = "0.14", optional = true }

[features]
# Advertise the served gRPC services (for grpcurl, etc.) on the webhook receiver.
reflection = ["dep:tonic-reflection"]
