[package]
name = "apollo-media"
version.workspace = true
edition.workspace = true

[dependencies]
apollo-domain = { path = "../domain" }
apollo-config = { path = "../config" }
image = "0.25"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tokio = { workspace = true, features = ["process", "net"] }
tempfile = "3"
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
