[package]
name = "apollo-proto"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
tonic = { workspace = true }
tonic-prost = "0.14"
prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
# Provides FileDescriptorSet/DescriptorProto for the schema-stability tests.
prost-types = "0.14"
