[package]
name = "apollo-server"
version.workspace = true
edition.workspace = true

[dependencies]
apollo-domain = { path = "../domain" }
apollo-engine = { path = "../engine" }
apollo-proto  = { path = "../proto" }
tonic = { workspace = true }
tonic-reflection = "0.14"
tonic-health = "0.14"
hmac = "0.13.0"
sha2 = "0.11.0"
pasetors = "0.7"
thiserror = "2"
tokio = { workspace = true, features = ["fs", "io-util", "rt"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
tracing = { workspace = true }

[features]
# Forward GPU backends down to the inference crate.
cuda = ["apollo-engine/cuda"]
